basic front end done, now to work on bringing mutations and queries in to begin storing data to DynamoDB

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,15 +3,18 @@
 .nav-main {
   a {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: black!important;
+    color: black !important;
+
     &:hover {
       border-bottom: none;
       text-decoration: none;
       opacity: 0.7;
     }
   }
+
   margin-bottom: 60px;
-  .logo{
+
+  .logo {
     font-weight: bold;
     text-decoration: none;
   }
@@ -25,11 +28,17 @@
     sans-serif;
 
   &__left {
-    background-color: blue;
+    background-color: #fff;
+    color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
   }
 
   &__button {
-    margin-top: 60px !important;
+    margin-top: 40px !important;
+    margin-bottom: 20px;
   }
 
   .home-top-3 {
@@ -37,8 +46,10 @@
     margin-top: 40px;
 
     .item {
-      background-color: black;
+      background-color: #fff;
       padding: 20px;
+      color: black;
+      text-align: center;
     }
   }
 
@@ -46,7 +57,7 @@
 
 
     &__instructions {
-      background-color: black!important;
+      background-color: black !important;
       height: 40vh;
     }
 
