--- a/src/App.scss
+++ b/src/App.scss
@@ -33,7 +33,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
+    background-image: url('./assets/seattle-washington-skyline-rainier.jpg');
+    background-size: cover;
   }
 
   &__button {
@@ -42,7 +43,7 @@
   }
 
   .home-top-3 {
-    height: 40vh;
+    height: 35vh;
     margin-top: 40px;
 
     .item {
@@ -61,5 +62,29 @@
       height: 40vh;
     }
 
+  }
+}
+
+.about-main {
+  font-family: 'Segoe UI',
+    Tahoma,
+    Geneva,
+    Verdana,
+    sans-serif;
+
+  &__left {
+    background-color: #fff;
+    color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url('./assets/seattle-washington-skyline-rainier.jpg');
+    background-size: cover;
+    height: 43vh;
+  }
+
+  &__button {
+    margin-top: 40px !important;
+    margin-bottom: 20px;
   }
 }
