copy for submission page

--- a/src/App.scss
+++ b/src/App.scss
@@ -55,11 +55,15 @@
   }
 
   .submit-main {
-
+    ul {
+      list-style: none;
+    }
 
     &__instructions {
       background-color: black !important;
       height: 40vh;
+
+  
     }
 
   }
