--- a/src/App.scss
+++ b/src/App.scss
@@ -62,21 +62,21 @@
       }
     }
   }
-
+}
   .submit-main {
-    ul {
-      list-style: none;
-    }
+
 
     &__instructions {
-      background-color: black !important;
-      height: 40vh;
+      
 
-  
+
+    }
+
+    &__form{
+      margin-top:30px;
     }
 
   }
-}
 
 .about-main {
   font-family: 'Segoe UI',
