--- a/src/App.scss
+++ b/src/App.scss
@@ -72,6 +72,26 @@
   }
 }
 
+.all-businesses-main {
+  &__inner {
+    padding-left: 0;
+
+    .item {
+      background-color: #f8f9fa;
+      padding: 20px;
+      color: black;
+      text-align: left;
+      border-radius: 4px;
+
+      h1 {
+        text-align: center;
+        font-size: 34px;
+        margin-bottom: 20px;
+      }
+    }
+  }
+}
+
 .submit-main {
 
 
