--- a/src/App.scss
+++ b/src/App.scss
@@ -65,6 +65,7 @@
         color: black;
         text-align: left;
         border-radius: 4px;
+        margin-bottom: 20px;
 
         h1 {
           text-align: center;
@@ -86,6 +87,8 @@
       color: black;
       text-align: left;
       border-radius: 4px;
+      margin-bottom: 20px;
+
 
       h1 {
         text-align: center;
