redirect regex withi amplify console, routes working

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,12 @@
 }
 
 .nav-main {
+  font-family: 'Segoe UI',
+    Tahoma,
+    Geneva,
+    Verdana,
+    sans-serif;
+
   a {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: black !important;
