--- a/src/App.scss
+++ b/src/App.scss
@@ -29,11 +29,6 @@
 }
 
 .home-main {
-  font-family: 'Segoe UI',
-    Tahoma,
-    Geneva,
-    Verdana,
-    sans-serif;
 
   .view-all-button-container {
     display: flex;
@@ -51,8 +46,36 @@
   }
 
   &__button {
-    margin-top: 30px !important;
+    margin-top: 20px !important;
     margin-bottom: 20px;
+    background-color: #35ADA3 !important;
+    border-color: white !important;
+    position: relative;
+
+    &:after {
+      content: "";
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      width: 0%;
+      height: 100%;
+      background-color: rgba(255, 255, 255, 0.4);
+      -webkit-transition: none;
+      -moz-transition: none;
+      -ms-transition: none;
+      -o-transition: none;
+      transition: none;
+    }
+
+    &:hover:after {
+      width: 120%;
+      background-color: rgba(255, 255, 255, 0);
+      -webkit-transition: all 0.3s ease-out;
+      -moz-transition: all 0.3s ease-out;
+      -ms-transition: all 0.3s ease-out;
+      -o-transition: all 0.3s ease-out;
+      transition: all 0.3s ease-out;
+    }
   }
 
   .home-top-3 {
@@ -66,18 +89,40 @@
       padding-left: 0;
 
       .item {
-        background-color: #f8f9fa;
+        position: relative;
+        background-color: #35ADA3;
         padding: 20px;
-        color: black;
+        color: white;
         text-align: left;
-        border-radius: 4px;
+        border-radius: 20px;
         margin-bottom: 20px;
 
+
         h1 {
-          text-align: center;
+          text-align: left;
           font-size: 34px;
           margin-bottom: 20px;
+          font-weight: 800;
         }
+
+        p {
+          color: white;
+          font-weight: 600;
+        }
+
+        a {
+          color: white;
+        }
+      }
+
+      .item:before {
+        content: '';
+        position: absolute;
+        top: 0;
+        right: 0;
+        border-top: 40px solid #A0D5C4;
+        border-left: 40px solid #35ADA3;
+        width: 0;
       }
     }
   }
@@ -88,19 +133,46 @@
     padding-left: 0;
 
     .item {
-      background-color: #f8f9fa;
+      position: relative;
+      background-color: #35ADA3;
       padding: 20px;
-      color: black;
+      color: white;
       text-align: left;
-      border-radius: 4px;
+      border-radius: 20px;
       margin-bottom: 20px;
 
 
       h1 {
-        text-align: center;
+        text-align: left;
         font-size: 34px;
         margin-bottom: 20px;
+        font-weight: 800;
       }
+
+      p {
+        color: white;
+        font-weight: 600;
+
+      }
+
+      a {
+        color: white;
+      }
+    }
+
+    .item:before {
+      content: '';
+      position: absolute;
+      top: 0;
+      right: 0;
+      border-top: 40px solid #A0D5C4;
+      border-left: 40px solid #35ADA3;
+      width: 0;
+    }
+
+    svg {
+      margin-right: 5px;
+      margin-bottom: 3px;
     }
   }
 }
